--- a/src/partials/leave-review.html
+++ b/src/partials/leave-review.html
@@ -7,8 +7,7 @@
     </button>
     <form class="review-form" name="reviews_form">
       <strong class="modal-review-title"
-        >залишити відгук про
-        <span class="strong-orang">нашу каву</span></strong
+        >залишити відгук про <span class="strong-orang">нашу каву</span></strong
       >
       <label class="modal-review-field">
         <input
