--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -33,7 +33,7 @@
           <img
             class="made-picture"
             src="./img/made_section/mob-made_@1x.jpg"
-            alt="A metal bowl with liquid chocolate and a whisk"
+            alt="Процес приготування кави"
           />
         </picture>
 
