--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -18,9 +18,9 @@
           <strong class="product-name">LAVAZZA ORO</strong>
           <p class="product-card-subtitle">Кава мелена 250 г</p>
           <div class="product-buttons">
-              <button class="product-button">284 UAH</button>
-              <button class="product-button details">Докладніше</button>
-        </div>
+            <button class="product-button">284 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
         <li class="swiper-slide prod">
           <img
@@ -33,7 +33,7 @@
           />
           <strong class="product-name">LAVAZZA ROSSA</strong>
           <p class="product-card-subtitle">Кава мелена 250 г</p>
-         <div class="product-buttons">
+          <div class="product-buttons">
             <button class="product-button">202 UAH</button>
             <button class="product-button details">Докладніше</button>
           </div>
@@ -48,7 +48,9 @@
             height="201"
           />
           <strong class="product-name">Кава Cavarro в зернах</strong>
-          <p class="product-card-subtitle">Cremoso 1 кг + чашка американо з блюдцем</p>
+          <p class="product-card-subtitle">
+            Cremoso 1 кг + чашка американо з блюдцем
+          </p>
           <div class="product-buttons">
             <button class="product-button">912 UAH</button>
             <button class="product-button details">Докладніше</button>
@@ -128,7 +130,7 @@
             height="201"
           />
           <strong class="product-name">Петрівська Слобода</strong>
-          <p class="product-card-subtitle">3 в 1 з ароматом згущене молоко </p>
+          <p class="product-card-subtitle">3 в 1 з ароматом згущене молоко</p>
           <div class="product-buttons">
             <button class="product-button">202 UAH</button>
             <button class="product-button details">Докладніше</button>
