--- a/src/partials/revives.html
+++ b/src/partials/revives.html
@@ -17,7 +17,8 @@
           <div class="reviews-user">
             <h3 class="reviews-name">Вікторія Добржанська</h3>
             <p class="reviews-text">
-              Найкраща колумбійська арабіка! М'який, витончений смак з легкою горчинкою. Професійна обжарка розкриває всі нюанси зерен.
+              Найкраща колумбійська арабіка! М'який, витончений смак з легкою
+              горчинкою. Професійна обжарка розкриває всі нюанси зерен.
             </p>
           </div>
         </div>
@@ -33,7 +34,8 @@
           <div class="reviews-user">
             <h3 class="reviews-name">Назар Бабенко. Львів</h3>
             <p class="reviews-text">
-              Неймовірно насичений аромат кави, який одразу занурює в атмосферу комфорту. Широкий вибір допоміг знайти мій улюблений купаж.
+              Неймовірно насичений аромат кави, який одразу занурює в атмосферу
+              комфорту. Широкий вибір допоміг знайти мій улюблений купаж.
             </p>
           </div>
         </div>
@@ -49,7 +51,8 @@
           <div class="reviews-user">
             <h3 class="reviews-name">Олена Кампуш</h3>
             <p class="reviews-text">
-              Якісна кава з чудовим збалансованим смаком. Завжди свіжа обжарка, неймовірний аромат і м'яке повне тіло напою.
+              Якісна кава з чудовим збалансованим смаком. Завжди свіжа обжарка,
+              неймовірний аромат і м'яке повне тіло напою.
             </p>
           </div>
         </div>
@@ -65,7 +68,8 @@
           <div class="reviews-user">
             <h3 class="reviews-name">Наталія Сус</h3>
             <p class="reviews-text">
-              Професійний підхід до обсмажування зберігає всю глибину смаку колумбійської арабіки. Тонка горчинка додає особливого шарму.
+              Професійний підхід до обсмажування зберігає всю глибину смаку
+              колумбійської арабіки. Тонка горчинка додає особливого шарму.
             </p>
           </div>
         </div>
@@ -81,7 +85,8 @@
           <div class="reviews-user">
             <h3 class="reviews-name">Daniel Nottingham. Sсotland</h3>
             <p class="reviews-text">
-              Unsurpassed coffee with a perfect roast. Economic coffee with an incredibly rich taste that lasts a long time
+              Unsurpassed coffee with a perfect roast. Economic coffee with an
+              incredibly rich taste that lasts a long time
             </p>
           </div>
         </div>
@@ -97,7 +102,8 @@
           <div class="reviews-user">
             <h3 class="reviews-name">Ірина Тидник</h3>
             <p class="reviews-text">
-              Найкраща місцева кава світового рівня! Широкий асортимент задовольнить найвибагливіших поціновувачів кавових напоїв. :)
+              Найкраща місцева кава світового рівня! Широкий асортимент
+              задовольнить найвибагливіших поціновувачів кавових напоїв. :)
             </p>
           </div>
         </div>
