--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -31,7 +31,7 @@
             <img
               class="sellers-img"
               src="./img/top_sellers/mob-roasted_@2x.jpg"
-              alt="nuts chocolate"
+              alt="Coffee"
               width="368"
               height="464"
             />
@@ -71,7 +71,7 @@
           <img
             class="sellers-img"
             src="./img/top_sellers/desc-range_@1x.jpg"
-            alt="milk chocolate"
+            alt="Coffee"
             width="368"
             height="464"
           />
@@ -94,7 +94,7 @@
           <img
             class="sellers-img"
             src="./img/top_sellers/desc-coffee_@1x.jpg"
-            alt="dark chocolate"
+            alt="coffee"
             width="368"
             height="464"
           />
