--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -3,7 +3,11 @@
     <div class="subscribe-text-container">
       <h2 class="subscribe-title">ВІДКРИЙ НАШУ <br />КАВУ ПЕРШИМ</h2>
       <p class="subscribe-text">
-        Від оксамитової текстури до насиченого та складного смаку, наша Нова Кава - це справжня розкіш, яка змусить вас бажати більшого. Створена лише з найвищоякісніших інгредієнтів та виготовлена з надзвичайною турботою, кожна порція - це справжній витвір мистецтва, який неодмінно вас вразить.
+        Від оксамитової текстури до насиченого та складного смаку, наша Нова
+        Кава - це справжня розкіш, яка змусить вас бажати більшого. Створена
+        лише з найвищоякісніших інгредієнтів та виготовлена з надзвичайною
+        турботою, кожна порція - це справжній витвір мистецтва, який неодмінно
+        вас вразить.
       </p>
     </div>
     <button class="subscribe-button" type="button" data-modal-open="explore">
