--- a/src/partials/taste.html
+++ b/src/partials/taste.html
@@ -6,7 +6,10 @@
         <span class="color-taste">смакову</span> сенсацію
       </h3>
       <p class="taste-text">
-        У Simply Coffee ми віримо, що секрет виняткової кави криється в деталях. Від пошуку найвищоякісніших інгредієнтів до старанного приготування кожної окремої порції, кожен крок нашого процесу складається в один винятковий смаковий досвід.
+        У Simply Coffee ми віримо, що секрет виняткової кави криється в деталях.
+        Від пошуку найвищоякісніших інгредієнтів до старанного приготування
+        кожної окремої порції, кожен крок нашого процесу складається в один
+        винятковий смаковий досвід.
       </p>
     </div>
 
@@ -36,7 +39,7 @@
               src="./img/taste_photo/milk_chocolate_mob.png"
               width="224"
               height="171"
-              alt="Milk Chocolate"
+              alt="Свіжозмелена кава"
             />
           </picture>
           <h2 class="title-taste">Свіжомелена кава</h2>
@@ -56,7 +59,10 @@
             </li>
           </ul>
           <p class="text-taste">
-            Свіжозмелена кава - це ароматний, насичений напій з багатим смаковим профілем. Вона відзначається високим вмістом корисних антиоксидантів. На відміну від попередньо змелених сумішей, свіжозмелена кава має ширший спектр смакових відтінків.
+            Свіжозмелена кава - це ароматний, насичений напій з багатим смаковим
+            профілем. Вона відзначається високим вмістом корисних
+            антиоксидантів. На відміну від попередньо змелених сумішей,
+            свіжозмелена кава має ширший спектр смакових відтінків.
           </p>
         </div>
       </div>
@@ -105,7 +111,9 @@
             </li>
           </ul>
           <p class="text-taste">
-            Молоко до кави — це ідеальне поєднання смаку та аромату. Воно пом’якшує гіркоту кави та додає ніжну вершкову нотку. Гаряче чи холодне, молоко підкреслює багатство кавових зерен. 
+            Молоко до кави — це ідеальне поєднання смаку та аромату. Воно
+            пом’якшує гіркоту кави та додає ніжну вершкову нотку. Гаряче чи
+            холодне, молоко підкреслює багатство кавових зерен.
           </p>
         </div>
       </div>
@@ -136,7 +144,7 @@
               src="./img/taste_photo/nuts_mob.png"
               width="224"
               height="171"
-              alt="Nuts"
+              alt="Кава розчинна"
             />
           </picture>
           <h2 class="title-taste">Кава розчинна</h2>
@@ -147,14 +155,18 @@
           <h3 class="subtitle-taste">Кава розчинна</h3>
           <ul class="list-taste">
             <li>
-              <button class="btn-taste active-taste" type="button">виробники</button>
+              <button class="btn-taste active-taste" type="button">
+                виробники
+              </button>
             </li>
             <li>
               <button class="btn-taste" type="button">докладніше</button>
             </li>
           </ul>
           <p class="text-taste">
-            Розчинна сублімована кава - практичний вибір. Вона зберігає аромат та корисні властивості, легко розчиняється. Компактна упаковка робить її зручною для зберігання та використання.
+            Розчинна сублімована кава - практичний вибір. Вона зберігає аромат
+            та корисні властивості, легко розчиняється. Компактна упаковка
+            робить її зручною для зберігання та використання.
           </p>
         </div>
       </div>
@@ -185,7 +197,7 @@
               src="./img/taste_photo/coffee_mob.png"
               width="224"
               height="171"
-              alt="Semi - sweet chocolate"
+              alt="Coffee"
             />
           </picture>
           <h2 class="title-taste">ВЛАСНЕ ОБЖАРЮВАННЯ</h2>
@@ -205,7 +217,9 @@
             </li>
           </ul>
           <p class="text-taste">
-                        Зерна кави власного обжарювання — це свіжість і унікальний смак у кожній чашці. Ми обираємо найкращі сорти і обжарюємо їх з любов’ю до деталей. 
+            Зерна кави власного обжарювання — це свіжість і унікальний смак у
+            кожній чашці. Ми обираємо найкращі сорти і обжарюємо їх з любов’ю до
+            деталей.
           </p>
         </div>
       </div>
