--- a/src/partials/thank-you.html
+++ b/src/partials/thank-you.html
@@ -12,7 +12,8 @@
     <div class="thanks-box-text">
       <h2 class="thanks-titel">Дякуємо вам!</h2>
       <p class="thanks-text">
-        Ми раді, що ви замовили нашу каву і даруємо вам знижку 20% на всю продукцію
+        Ми раді, що ви замовили нашу каву і даруємо вам знижку 20% на всю
+        продукцію
       </p>
     </div>
 
@@ -35,7 +36,7 @@
       <img
         class="thanks-img"
         src="./img/thanks_chocolate/chocolate-mob@1x.png"
-        alt="Pice of chocolate"
+        alt="Coffee heart"
       />
     </picture>
   </div>
