--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -10,7 +10,9 @@
         <a class="menu-nav-link active" href="#home">Головна</a>
       </li>
       <li class="menu-nav-item">
-        <a class="menu-nav-link" href="#how-made-scroll-container">Як це зроблено?</a>
+        <a class="menu-nav-link" href="#how-made-scroll-container"
+          >Як це зроблено?</a
+        >
       </li>
       <li class="menu-nav-item">
         <a class="menu-nav-link" href="#our-products">Каталог</a>
