--- a/src/css/header.css
+++ b/src/css/header.css
@@ -22,10 +22,16 @@
     border-radius: 100px;
     border: 0;
     /* margin-right: 14px; */
-    transition: color 400ms cubic-bezier(0.4, 0, 0.2, 1), background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
+    transition: var(--button-color-transition);
 }
+
+.header-buy-btn:hover,
+.header-buy-btn:focus {
+  background-color: #fcf1e0;
+  color: #fd9222;
+}
+
+
 @media only screen and (min-width: 768px) {
   .mobile-container {
     max-width: 704px;
