--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -220,8 +220,7 @@
   border-radius: 100px;
   border: 0;
   /* margin-right: 14px; */
-  transition: color 400ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--button-color-transition);
 }
 
 .buy-btn:hover,
