--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,6 +31,8 @@
   --dark-purple-main: #1e1823;
   --orange-main: #fd9222;
   --white-main: #fafafa;
+  --button-color-transition: color 400ms cubic-bezier(0.4, 0, 0.2, 1), background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 body {
