--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,4 +1,4 @@
-.sub-section{
+.sub-section {
   padding-top: 62px;
   padding-bottom: 63px;
   max-width: 1200px;
@@ -9,22 +9,21 @@
 @media only screen and (min-width: 768px) {
   .sub-section {
     padding-top: 72px;
-    padding-bottom: 72px
+    padding-bottom: 72px;
   }
 }
 
 .subscribe-container {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 1200px;
-
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1200px;
 }
 
 .subscribe-text-container {
-    max-width: 326px;
-    padding-bottom: 24px;
+  max-width: 326px;
+  padding-bottom: 24px;
 }
 
 @media only screen and (min-width: 376px) {
@@ -34,38 +33,73 @@
 }
 
 .bg-sub-img {
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/subscribe/mob_@1x.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
+  background-image: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url(../img/subscribe/mob_@1x.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    .bg-sub-img {
-      background-image:linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/subscribe/mob_@2x.jpg); ;
-    }
-  }
-
-  @media only screen and (min-width: 376px) {
-    .bg-sub-img {
-        background-image:linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/subscribe/tabl_@1x.jpg)
-    }
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-        .bg-sub-img {
-            background-image:linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/subscribe/tabl_@2x.jpg)
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .bg-sub-img {
+    background-image: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.2),
+        rgba(0, 0, 0, 0.2)
+      ),
+      url(../img/subscribe/mob_@2x.jpg);
   }
 }
+
+@media only screen and (min-width: 376px) {
+  .bg-sub-img {
+    background-image: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.2),
+        rgba(0, 0, 0, 0.2)
+      ),
+      url(../img/subscribe/tabl_@1x.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .bg-sub-img {
+      background-image: linear-gradient(
+          to top,
+          rgba(0, 0, 0, 0.2),
+          rgba(0, 0, 0, 0.2)
+        ),
+        url(../img/subscribe/tabl_@2x.jpg);
+    }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .bg-sub-img {
+    background-image: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.2),
+        rgba(0, 0, 0, 0.2)
+      ),
+      url(../img/subscribe/desc_@1x.jpg);
   }
 
-  @media only screen and (min-width: 768px) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .bg-sub-img {
-        background-image:linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/subscribe/desc_@1x.jpg) ;
-    }
-
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx)  {
-    .bg-sub-img {
-        background-image:linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/subscribe/tabl_@2x.jpg)
+      background-image: linear-gradient(
+          to top,
+          rgba(0, 0, 0, 0.2),
+          rgba(0, 0, 0, 0.2)
+        ),
+        url(../img/subscribe/tabl_@2x.jpg);
     }
   }
 }
@@ -91,22 +125,29 @@
 }
 
 .subscribe-text {
-    font-size: 14px;
-    line-height: 18px;
-    color: var(--white-main);
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--white-main);
 }
 
 .subscribe-button {
-    color: var(--white-main);
-    margin: 0 auto 0 auto;
-    padding: 12px 28px;
-    border-radius: 100px;
-    background-color: var(--orange-main);
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
+  color: var(--white-main);
+  margin: 0 auto 0 auto;
+  padding: 12px 28px;
+  border-radius: 100px;
+  background-color: var(--orange-main);
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  transition: var(--button-color-transition);
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: #fcf1e0;
+  color: #fd9222;
 }
 
 @media only screen and (min-width: 376px) {
